--- a/.traefik.yml
+++ b/.traefik.yml
@@ -5,10 +5,10 @@ type: middleware
 import: github.com/jeppestaerk/traefik-xff-to-xrealip
 summary: |
   A Traefik middleware plugin that rewrites the X-Real-Ip header
-  using the first IP address from the X-Forwarded-For header.
+  using an IP address from the X-Forwarded-For header.
+  The depth (index) of the IP to select can be configured (defaults to 0, the first IP).
   Useful when Traefik is behind Cloudflare or other reverse proxies.
 testData:
+  depth: 1 # Example: pick the second IP (index 1)
   Headers:
-    X-Forwarded-For:
-      - 203.0.113.5
-      - 10.0.0.1
+    X-Forwarded-For: "203.0.113.5, 10.0.0.1, 192.168.0.100"
