Update displayName and summary in .traefik.yml for clarity; fix parameter order in New function for consistency

--- a/.traefik.yml
+++ b/.traefik.yml
@@ -1,13 +1,12 @@
 # .traefik.yml
 
-displayName: traefik-xff-to-xrealip
+displayName: "🎯 X-Real-IP from X-Forwarded-For"
 type: middleware
 import: github.com/jeppestaerk/traefik-xff-to-xrealip
 summary: |
-  A Traefik middleware plugin that rewrites the X-Real-Ip header
-  using an IP address from the X-Forwarded-For header.
-  The depth (index) of the IP to select can be configured (defaults to 0, the first IP).
-  Useful when Traefik is behind Cloudflare or other reverse proxies.
+  ✨ Pinpoint the correct client IP! This Traefik plugin intelligently sets `X-Real-Ip` 
+  by selecting an IP from the `X-Forwarded-For` header using a customizable `depth` (index).
+  🌐 Ideal for multi-proxy setups (e.g., behind Cloudflare). Get the real client IP, every time! 🚀
 testData:
   depth: 1 # Example: pick the second IP (index 1)
   Headers:
