--- a/.github/workflows/build_and_test.yml
+++ b/.github/workflows/build_and_test.yml
@@ -47,6 +47,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-${{ matrix.go-version }}-go-
 
+      - name: Install golangci-lint ${{ env.GOLANGCI_LINT_VERSION }}
+        if: runner.os != 'Windows'
+        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
+
+      - name: Install Yaegi ${{ env.YAEGI_VERSION }}
+        if: runner.os != 'Windows'
+        run: curl -sfL https://raw.githubusercontent.com/traefik/yaegi/master/install.sh | bash -s -- -b $(go env GOPATH)/bin ${YAEGI_VERSION}
+
       - name: Setup GOPATH
         run: go env -w GOPATH=${{ github.workspace }}/go
 
@@ -59,17 +67,12 @@ jobs:
           go mod vendor
           # git diff --exit-code ./vendor/
 
-      - name: Install golangci-lint ${{ env.GOLANGCI_LINT_VERSION }}
-        if: runner.os != 'Windows'
-        run: curl -sSfL https://raw.githubusercontent.com/golangci/golangci-lint/master/install.sh | sh -s -- -b $(go env GOPATH)/bin ${GOLANGCI_LINT_VERSION}
-
-      - name: Install Yaegi ${{ env.YAEGI_VERSION }}
-        if: runner.os != 'Windows'
-        run: curl -sfL https://raw.githubusercontent.com/traefik/yaegi/master/install.sh | bash -s -- -b $(go env GOPATH)/bin ${YAEGI_VERSION}
 
       - name: Lint and Standard Tests (Linux/macOS)
         if: runner.os != 'Windows'
         run: make
+        env:
+          GOPATH: ${{ github.workspace }}/go
 
       - name: Run tests with Yaegi (Linux/macOS)
         if: runner.os != 'Windows'
